# django-modeltranslation

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .versionrc.json  AUTHORS.rst  AUTHORS.txt  CHANGELOG.md  CHANGELOG.txt  LICENSE.txt  MANIFEST.in  Makefile  PKG-INFO  README.rst  VERSION  coverage.xml  get-django-version.py  junit.xml  manage.py  modeltranslation-version-updater.js  pkg-info-updater.js  pyproject.toml  pyrightconfig.json  pytest.ini  runtests.py  setup.cfg  setup.py  test.db  tox.ini  travis.py  typing-test.py
.github/workflows/: ci.yml  code-quality.yml  github-actions.yml  release.yml  test.yml
app/: admin.py  models.py  translation.py
cbv/: settings.py  urls.py  wsgi.py
docs/modeltranslation/: Makefile  admin.rst  caveats.rst  changelog.rst  commands.rst  conf.py  contribute.rst  forms.rst  index.rst  installation.rst  make.bat  modeltranslation-0.2.txt  modeltranslation-0.4.txt  modeltranslation-wiki.txt  modeltranslation.txt  registration.rst  related_projects.rst  usage.rst
modeltranslation/: __init__.py  _compat.py  _typing.py  admin.py  apps.py  autotranslate.py  decorators.py  fields.py  forms.py  manager.py  middleware.py  models.py  serializers.py  settings.py  signals.py  tests.py  testurls.py  thread_context.py  translator.py  utils.py  widgets.py
modeltranslation/management/commands/: loaddata.py  sync_translation_fields.py  translate_translation_fields.py  update_translation_fields.py
modeltranslation/media/modeltranslation/css/: tabbed_translation_fields.css
modeltranslation/media/modeltranslation/js/: tabbed_translation_fields.js
modeltranslation/static/modeltranslation/css/: tabbed_translation_fields.css
modeltranslation/static/modeltranslation/js/: clearable_inputs.js  force_jquery.js  tabbed_translation_fields.js
modeltranslation/templates/admin/modeltranslation/: change_form.html
modeltranslation/tests/: __init__.py  admin.py  models.py  project_translation.py  runtests.py  settings.py  test_admin.py  test_admin_views.py  test_compat.py  test_constraints.py  test_field_options.py  test_index.py  test_runtime_typing.py  test_settings.py  test_third_party.py  test_utils.py  tests.py  translation.py  urls.py  utils.py
modeltranslation/tests/fixtures/: fixture.json
modeltranslation/tests/locale/de/LC_MESSAGES/: django.mo  django.po
modeltranslation/tests/managed_app/: models.py  translation.py
modeltranslation/tests/migrations/: 0001_initial.py  0002_alter_manytomanyfieldmodel_self_call_1_and_more.py  0003_firstsetnullforeignkeymodel_translated_and_more.py
modeltranslation/tests/test_app/: models.py  translation.py
trunk/: AUTHORS.txt  CHANGELOG.txt  LICENSE.txt
trunk/docs/modeltranslation/: modeltranslation-0.1.txt
trunk/modeltranslation/: admin.py  models.py  testurls.py
trunk/modeltranslation/management/commands/: update_translation_fields.py
