[project]
name = "django-modeltranslation"
version = "0.19.9"
description = "Translates Django models using a registration approach."
authors = [{ name = "Peter Eschler", email = "peschler@gmail.com" }]
maintainers = [
    { name = "Serhii Tereshchenko", email = "serg.partizan@gmail.com" },
]
requires-python = "<4,>=3.9"
dependencies = [
    "django>=4.2",
    "typing-extensions>=4.0.1; python_version < \"3.11\"",
]

[dependency-groups]
dev = [
    "ruff",
    "pdbpp",
    "parameterized",
    "pytest-cov",
    "pytest",
    "pytest-sugar",
    "pytest-django",
    "django-stubs<6.0.0,>=5.0.2",
    "mypy",
    "build",
    "pillow",
]
lsp = ["python-lsp-server[rope]", "pylsp-mypy"]

[tool.ruff]
line-length = 100
target-version = "py39"
[tool.ruff.lint]
ignore = [
    "E501", # line length is handled by formatter
]

[tool.ruff.lint.pyflakes]
extend-generics = [
    "django.db.models.ForeignKey",
    "django.db.models.OneToOneField",
    "django.db.models.ManyToManyField",
    "django.db.models.Manager",
    "django.db.models.manager.RelatedManager",
]

[tool.mypy]
python_version = "3.9"
incremental = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_context = true
exclude = ['tests/migrations/', 'tests/urls.py']
disable_error_code = ["method-assign"]
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = ["modeltranslation.fields"]
disable_error_code = ["attr-defined", "has-type", "misc"]

[[tool.mypy.overrides]]
module = ["modeltranslation.admin"]
disable_error_code = ["override", "attr-defined"]

[[tool.mypy.overrides]]
module = ["modeltranslation.translator"]
disable_error_code = ["override", "attr-defined"]

[[tool.mypy.overrides]]
module = ["modeltranslation.manager"]
disable_error_code = ["override", "attr-defined", "return-value", "misc"]

[tool.django-stubs]
django_settings_module = "modeltranslation.tests.settings"
