[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-modeltranslation"
dynamic = ["version"]
description = "Translates Django models using a registration approach."
readme = "README.rst"
authors = [
    { name = "Peter Eschler", email = "peschler@gmail.com" },
    { name = "Dirk Eschler", email = "eschler@gmail.com" },
]
maintainers = [
    { name = "Sergiy Tereshchenko", email = "serg.partizan+modeltranslation@gmail.com" },
]
license = "BSD-3-Clause"
requires-python = "<4,>=3.9"
dependencies = [
    "Django>=4.2",
    "typing-extensions>=4.0.1; python_version < \"3.11\"",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Framework :: Django",
]
[project.urls]
"Homepage" = "https://github.com/deschler/django-modeltranslation"
"Source" = "https://github.com/deschler/django-modeltranslation"
"Documentation" = "https://django-modeltranslation.readthedocs.org/en/latest"
"Mailing List" = "http://groups.google.com/group/django-modeltranslation"
"Changelog" = "https://github.com/deschler/django-modeltranslation/blob/master/CHANGELOG.md"

[tool.setuptools]
packages = [
    "modeltranslation",
    "modeltranslation.management",
    "modeltranslation.management.commands",
]

[tool.setuptools.package-data]
modeltranslation = [
    "static/modeltranslation/css/*.css",
    "static/modeltranslation/js/*.js",
    "py.typed",
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[dependency-groups]
dev = [
    "ruff",
    "pdbpp",
    "parameterized",
    "pytest-cov",
    "pytest",
    "pytest-sugar",
    "pytest-django",
    "django-stubs<6.0.0,>=5.0.2",
    "mypy",
    "build",
    "pillow",
]
lsp = ["python-lsp-server[rope]", "pylsp-mypy"]

[tool.ruff]
line-length = 100
target-version = "py39"
[tool.ruff.lint]
ignore = [
    "E501", # line length is handled by formatter
]

[tool.ruff.lint.pyflakes]
extend-generics = [
    "django.db.models.ForeignKey",
    "django.db.models.OneToOneField",
    "django.db.models.ManyToManyField",
    "django.db.models.Manager",
    "django.db.models.manager.RelatedManager",
]

[tool.mypy]
python_version = "3.9"
incremental = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_context = true
exclude = ['tests/migrations/', 'tests/urls.py']
disable_error_code = ["method-assign"]
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = ["modeltranslation.fields"]
disable_error_code = ["attr-defined", "has-type", "misc"]

[[tool.mypy.overrides]]
module = ["modeltranslation.admin"]
disable_error_code = ["override", "attr-defined"]

[[tool.mypy.overrides]]
module = ["modeltranslation.translator"]
disable_error_code = ["override", "attr-defined"]

[[tool.mypy.overrides]]
module = ["modeltranslation.manager"]
disable_error_code = ["override", "attr-defined", "return-value", "misc"]

[tool.django-stubs]
django_settings_module = "modeltranslation.tests.settings"
