[metadata]
name = django-modeltranslation
version = attr:modeltranslation.__version__
description = Translates Django models using a registration approach.
long_description = file:README.rst
long_description_content_type = text/x-rst
author = Peter Eschler
author_email = peschler@gmail.com
maintainer = Sergiy Tereshchenko
maintainer_email = serg.partizan+modeltranslation@gmail.com
url = https://github.com/deschler/django-modeltranslation
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Environment :: Web Environment
    Intended Audience :: Developers
    Framework :: Django
    License :: OSI Approved :: BSD License
license = New BSD
[options]
install_requires =
    Django>=2.2
    six
packages =
    modeltranslation
    modeltranslation.management
    modeltranslation.management.commands
[options.package_data]
modeltranslation =
    static/modeltranslation/css/*.css
    static/modeltranslation/js/*.js
