[metadata]
name = django-modeltranslation
version = file:VERSION
description = Translates Django models using a registration approach.
long_description = file:README.rst
long_description_content_type = text/x-rst
author = Peter Eschler
author_email = peschler@gmail.com
maintainer = Sergiy Tereshchenko
maintainer_email = serg.partizan+modeltranslation@gmail.com
url = https://github.com/deschler/django-modeltranslation
project_urls =
    Source = https://github.com/deschler/django-modeltranslation
    Documentation = https://django-modeltranslation.readthedocs.org/en/latest
    Mailing List = http://groups.google.com/group/django-modeltranslation
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    Environment :: Web Environment
    Intended Audience :: Developers
    Framework :: Django
    License :: OSI Approved :: BSD License
license = New BSD
[options]
install_requires =
    Django>=4.2
    typing-extensions>=4.0.1; python_version<"3.11"
packages =
    modeltranslation
    modeltranslation.management
    modeltranslation.management.commands
[options.package_data]
modeltranslation =
    static/modeltranslation/css/*.css
    static/modeltranslation/js/*.js
    py.typed
